# matrix-webhook

./: .mergify.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: entrypoint.yml  ghcr.yml  lint.yml
tests/: Dockerfile
