[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [{email = "guilhem.saurel@laas.fr", name = "Guilhem Saurel"}]
dependencies = [
  "Markdown>=3.6",
  "matrix-nio>=0.25"
]
description = "Post a message to a matrix room with a simple HTTP POST"
license = {text = "BSD-2-Clause"}
name = "matrix-webhook"
readme = "README.md"
requires-python = ">=3.13"
version = "3.9.1"

[project.scripts]
matrix-webhook = "matrix_webhook.__main__:main"

[project.urls]
Homepage = "https://github.com/fingon/matrix-webhook"
Repository = "https://github.com/fingon/matrix-webhook.git"
changelog = "https://github.com/fingon/matrix-webhook/blob/master/CHANGELOG.md"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "COM", "D", "EM", "EXE", "G", "I", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
